--- a/pom.xml
+++ b/pom.xml
@@ -90,6 +90,12 @@
           </executions>
       </plugin>
       <plugin>
+            <groupId>org.sonarsource.scanner.maven</groupId>
+            <artifactId>sonar-maven-plugin</artifactId>
+            <version>3.4.0.905</version>
+      </plugin>
+
+      <plugin>
           <artifactId>maven-compiler-plugin</artifactId>
           <configuration>
               <source>1.8</source>
